rename module to 'rdf'